2009-01-07  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.VersionControl/ChangeLogWriter.cs: If there are no
	changelog entries, generate an empty message (don't include the
	headers). Fixes bug #375668 - If no text is entered for any changed
	file, an entry with only name and e-mail is added to the ChangeLog.

2008-12-12  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.VersionControl.mdp: All projects now require fx 3.5.

2008-12-09  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.VersionControl.mdp: Don't require a specific version of
	Mono.Addins.

2008-12-05  Lluis Sanchez Gual  <lluis@novell.com>

	* VersionControl.addin.xml: Hide/protect add-ins.

2008-12-04  Lluis Sanchez Gual  <lluis@novell.com>

	* Makefile.am: Make it work for parallel build.

2008-12-02  Michael Hutchinson  <mhutchinson@novell.com>

	* Makefile.am:
	* AssemblyInfo.cs:
	* MonoDevelop.VersionControl.mdp: Add AssemblyInfo.cs files that are
	autogenerated from the addin manifests.

2008-11-14  Andrés G. Aragoneses  <aaragoneses@novell.com>

	* MonoDevelop.VersionControl.Views/LogView.cs: Corrected strings.

	* MonoDevelop.VersionControl/RevertCommand.cs: Unset commit messages
	after reverting.

2008-11-14  Andrés G. Aragoneses  <aaragoneses@novell.com>

	* MonoDevelop.VersionControl.Views/LogView.cs: Prevent commit message
	creation when user cancels.

2008-11-13  Andrés G. Aragoneses  <aaragoneses@novell.com>

	* MonoDevelop.VersionControl.Views/LogView.cs: Improve
	Revert[to]revision feature, adding commit messages.

2008-11-13  Andrés G. Aragoneses  <aaragoneses@novell.com>

	* MonoDevelop.VersionControl.Views/LogView.cs: Coding guidelines.

2008-11-05  Lluis Sanchez Gual  <lluis@novell.com>

	* VersionControl.addin.xml: Bump MD version.

2008-11-03  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.VersionControl.Views/StatusView.cs: Don't crash when
	updating the status of deleted files (there isn't a VersionInfo for